checkpoint gradient redo

--- a/index.html
+++ b/index.html
@@ -360,8 +360,8 @@ window.addEventListener('scroll', () => {
 
   <div class="row rgbaRow">
       <div class="col-12 text-center whatIsExokitPusher" style="color: white">
-          <h1 class="slideItem" data-animation="[{k: 'translateX', sp: 0.05, ep: 0.13, sv: -50, ev: 0, u: 'vw'}]">What is Exokit?</h1>
-          <h4 class="font-weight-light slideItem" data-animation="[{k: 'translateX', sp: 0.05, ep: 0.16, sv: -60, ev: 0, u: 'vw'}]">
+          <h1>What is Exokit?</h1>
+          <h4 class="font-weight-light">
             Exokit is an XR engine that runs your code as native.</h4>
           <div class="featurePusher"></div>
           <div class="featureTextPusher"></div>
@@ -373,17 +373,17 @@ window.addEventListener('scroll', () => {
       <div class="featureTextPusher"></div>
     </div>
     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 mb-4">
-      <h2 class="featureText pb-4 slideItem" data-animation="[{k: 'translateX', sp: 0.25, ep: 0.36, sv: -50, ev: 0, u: 'vw'}]">Power up your WebXR app</h2>
-      <h5 class="featureText slideItem text-left font-weight-light" data-animation="[{k: 'translateX', sp: 0.3, ep: 0.35, sv: -50, ev: 0, u: 'vw'}]">
+      <h2 class="featureText pb-4">Power up your WebXR app</h2>
+      <h5 class="featureText text-left font-weight-light">
         Exokit runs regular HTML+JS WebXR sites. Add hardware bindings, native code, and more with the APIs Exokit gives you access to.</h5>
     </div>
     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 text-center mt-4">
       <div class="row">
-        <div class="col-6">
-            <i class="featureMain slideItem fab fa-js-square fa-4x p-1" data-animation="[{k: 'translateX', sp: 0.20, ep: 0.36, sv: -150, ev: 0, u: 'vw'}]"></i>
-            <h4 class="featureMain slideItem" data-animation="[{k: 'translateX', sp: 0.22, ep:  0.38, sv: -150, ev: 0, u: 'vw'}]">Javascript</h4>
+        <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 mt-4">
+            <i class="featureMain slideItem fab fa-js-square fa-4x p-1" data-animation="[{k: 'translateX', sp: 0.1, ep: 0.3, sv: -150, ev: 0, u: 'vw'}]"></i>
+            <h4 class="featureMain slideItem" data-animation="[{k: 'translateX', sp: 0.1, ep:  0.2, sv: -150, ev: 0, u: 'vw'}]">Javascript</h4>
           </div>
-          <div class="col-6">
+          <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 mt-4">
               <i class="featureMain slideItem fab fa-html5 fa-4x p-1" data-animation="[{k: 'translateX', sp: 0.20, ep: 0.36, sv: -150, ev: 0, u: 'vw'}]"></i>
               <h4 class="featureMain slideItem" data-animation="[{k: 'translateX', sp: 0.22, ep: 0.38, sv: -150, ev: 0, u: 'vw'}]">HTML</h4>
           </div>
@@ -399,10 +399,10 @@ window.addEventListener('scroll', () => {
       <div class="featureTextPusher"></div>
     </div>
     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 mb-4">
-        <h2 class="featureText pb-4 slideItem" data-animation="[{k: 'translateX', sp: 0.3, ep: 0.58, sv: 150, ev: 0, u: 'vw'}]">Run apps in Exokit</h1>
-        <h5 class="featureText text-left font-weight-light slideItem"
-          data-animation="[{k: 'translateX', sp: 0.4, ep: 0.58, sv: 150, ev: 0, u: 'vw'}]">
-          Run your app in Exokit with a URL. Or, run 5 instances in multiplayer AR. Debug it all with standard DevTools.</h5>
+        <h2 class="featureText pb-4 slideItem">Run apps in Exokit</h1>
+        <h5 class="featureText text-left font-weight-light slideItem">
+          Run your app in Exokit with a URL. Or, run 5 instances in multiplayer AR. Debug it all with standard DevTools.
+        </h5>
     </div>
     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 text-center mt-4">
       <img class="exokitImg featureMain slideItem" src="media/logo-white.svg" data-animation="[{k: 'translateX', sp: 0.3, ep: 0.58, sv: 100, ev: 0, u: 'vw'}]"></img>
@@ -418,10 +418,10 @@ window.addEventListener('scroll', () => {
         <div class="featureTextPusher"></div>
       </div>
       <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 mb-4">
-        <h2 class="featureText pb-4 slideItem" data-animation="[{k: 'translateX', sp: 0.55, ep: 0.8, sv: -50, ev: 0, u: 'vw'}]">Run apps in Exokit</h1>
-        <h5 class="featureText text-left font-weight-light slideItem"
-          data-animation="[{k: 'translateX', sp: 0.55, ep: 0.8, sv: -80, ev: 0, u: 'vw'}]">
-          Run your app in Exokit with a URL. Or, run 5 instances in multiplayer AR. Debug it all with standard DevTools.</h5>
+        <h2 class="featureText pb-4 slideItem">Run apps in Exokit</h1>
+        <h5 class="featureText text-left font-weight-light slideItem">
+          Run your app in Exokit with a URL. Or, run 5 instances in multiplayer AR. Debug it all with standard DevTools.
+        </h5>
       </div>
       <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 mt-4">
         <div class="row">
@@ -437,6 +437,7 @@ window.addEventListener('scroll', () => {
         </div>
       </div>
       <div class="col-12">
+        <div class="featureTextPusher"></div>
         <div class="featureTextPusher"></div>
       </div>
   </div>
