--- a/index.html
+++ b/index.html
@@ -380,12 +380,12 @@ window.addEventListener('scroll', () => {
     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 text-center mt-4">
       <div class="row">
         <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 mt-4">
-            <i class="featureMain slideItem fab fa-js-square fa-4x p-1" data-animation="[{k: 'translateX', sp: 0.1, ep: 0.3, sv: -150, ev: 0, u: 'vw'}]"></i>
-            <h4 class="featureMain slideItem" data-animation="[{k: 'translateX', sp: 0.1, ep:  0.2, sv: -150, ev: 0, u: 'vw'}]">Javascript</h4>
+            <i class="featureMain slideItem fab fa-js-square fa-4x p-1" data-animation="[{k: 'translateX', sp: 0.15, ep: 0.35, sv: -10, ev: 0, u: 'vw'}]"></i>
+            <h4 class="featureMain slideItem" data-animation="[{k: 'translateX', sp: 0.15, ep:  0.35, sv: 10, ev: 0, u: 'vw'}]">Javascript</h4>
           </div>
           <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 mt-4">
-              <i class="featureMain slideItem fab fa-html5 fa-4x p-1" data-animation="[{k: 'translateX', sp: 0.20, ep: 0.36, sv: -150, ev: 0, u: 'vw'}]"></i>
-              <h4 class="featureMain slideItem" data-animation="[{k: 'translateX', sp: 0.22, ep: 0.38, sv: -150, ev: 0, u: 'vw'}]">HTML</h4>
+              <i class="featureMain slideItem fab fa-html5 fa-4x p-1" data-animation="[{k: 'translateX', sp: 0.15, ep: 0.35, sv: 50, ev: 0, u: 'vw'}]"></i>
+              <h4 class="featureMain slideItem" data-animation="[{k: 'translateX', sp: 0.15, ep: 0.35, sv: 50, ev: 0, u: 'vw'}]">HTML</h4>
           </div>
       </div>
     </div>
@@ -399,14 +399,14 @@ window.addEventListener('scroll', () => {
       <div class="featureTextPusher"></div>
     </div>
     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 mb-4">
-        <h2 class="featureText pb-4 slideItem">Run apps in Exokit</h1>
-        <h5 class="featureText text-left font-weight-light slideItem">
+        <h2 class="featureText pb-4">Run apps in Exokit</h1>
+        <h5 class="featureText text-left font-weight-light">
           Run your app in Exokit with a URL. Or, run 5 instances in multiplayer AR. Debug it all with standard DevTools.
         </h5>
     </div>
     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 text-center mt-4">
-      <img class="exokitImg featureMain slideItem" src="media/logo-white.svg" data-animation="[{k: 'translateX', sp: 0.3, ep: 0.58, sv: 100, ev: 0, u: 'vw'}]"></img>
-      <h3 class="featureMain exokitName slideItem" data-animation="[{k: 'translateX', sp: 0.4, ep: 0.58, sv: 100, ev: 0, u: 'vw'}]">Exokit</h3>
+      <img class="exokitImg featureMain slideItem" src="media/logo-white.svg" data-animation="[{k: 'translateX', sp: 0.36, ep: 0.5, sv: 10, ev: 0, u: 'vw'}]"></img>
+      <h3 class="featureMain exokitName slideItem" data-animation="[{k: 'translateX', sp: 0.36, ep: 0.5, sv: 10, ev: 0, u: 'vw'}]">Exokit</h3>
     </div>
     <div class="col-12">
       <div class="featureTextPusher"></div>
@@ -418,21 +418,21 @@ window.addEventListener('scroll', () => {
         <div class="featureTextPusher"></div>
       </div>
       <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 mb-4">
-        <h2 class="featureText pb-4 slideItem">Run apps in Exokit</h1>
-        <h5 class="featureText text-left font-weight-light slideItem">
+        <h2 class="featureText pb-4">Run apps in Exokit</h1>
+        <h5 class="featureText text-left font-weight-light">
           Run your app in Exokit with a URL. Or, run 5 instances in multiplayer AR. Debug it all with standard DevTools.
         </h5>
       </div>
       <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 mt-4">
         <div class="row">
           <div class="col-lg-4 text-center">
-            <img class="mlImg featureMain slideItem" src="media/ML.png" data-animation="[{k: 'translateX', sp: 0.55, ep: 0.8, sv: 50, ev: 0, u: 'vw'}]"></img>
+            <img class="mlImg featureMain slideItem" src="media/ML.png" data-animation="[{k: 'translateX', sp: 0.55, ep: 0.7, sv: 50, ev: 0, u: 'vw'}]"></img>
           </div>
           <div class="col-lg-4 text-center">
-            <img class="viveImg featureMain slideItem" src="media/vive.png" data-animation="[{k: 'translateX', sp: 0.50, ep: 0.8, sv: 50, ev: 0, u: 'vw'}]"></img>
+            <img class="viveImg featureMain slideItem" src="media/vive.png" data-animation="[{k: 'translateX', sp: 0.50, ep: 0.7, sv: 50, ev: 0, u: 'vw'}]"></img>
           </div>
           <div class="col-lg-4 text-center">
-            <img class="oculusImg featureMain slideItem" src="media/oculus.png" data-animation="[{k: 'translateX', sp: 0.45, ep: 0.8, sv: 50, ev: 0, u: 'vw'}]"></img>
+            <img class="oculusImg featureMain slideItem" src="media/oculus.png" data-animation="[{k: 'translateX', sp: 0.45, ep: 0.7, sv: 50, ev: 0, u: 'vw'}]"></img>
           </div>
         </div>
       </div>
