--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@ window.addEventListener('scroll', () => {
 
   const breakPoint = 1.0 / 12;
   const scrollYValue = 80;
-  const vLineFactor = Math.floor(factor * 100) * 5 + "%";
-
+  const vLineFactor = (factor * featuresRight.clientHeight) + "px";
   const containers = document.getElementsByClassName('align-container');
 
   let totalWidth = 0;
@@ -528,7 +527,7 @@ window.addEventListener('scroll', () => {
         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6" id="featuresListCol" style="margin-top: -50px;">
           <div class="row">
             <div class="col-2">
-              <div class="vLine ml-3 mr-3" id="vLine" style="height: 5vh;"></div>
+              <div class="vLine ml-4 mr-3" id="vLine" style="height: 3vh;"></div>
             </div>
             <div class="col-10" id="featuresRight">
               <a onclick="clickList(0)"><h5 class="font-weight-light" id="item1">Runs Existing Code</h5></a>
