Accelerate hero gradient

--- a/index.html
+++ b/index.html
@@ -458,6 +458,7 @@ window.addEventListener('scroll', _updateScroll);
 </div>
 
 <div class="whatIsExokit pt-4" id="featureMain-wrap">
+  <div class=gradient></div>
 
   <div class="row rgbaRow">
       <div class="col-12 text-center whatIsExokitPusher" style="color: white">
